--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.port=8081
 
 servlet.name=archiveServlet
 servlet.mapping=/repository/maven-releases
+
+data.root=${user.home}/blazar-archive/repository
