add maven wrapper, start to build dockerfile

--- a/src/main/resources/prod.properties
+++ b/src/main/resources/prod.properties
@@ -3,6 +3,5 @@
 # Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
 
 
-servlet.name=archiveServlet
-servlet.mapping=/repository/maven-releases
-
+server.port=8081
+data.root=/archive-data
