--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,17 @@
 servlet.name=archiveServlet
 servlet.mapping=/repository/maven-releases
 
+# actuator endpoints
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+management.endpoints.web.base-path=/monitoring
+
+# enable the info.app properties below to show up in actuator/info
+management.info.env.enabled=true
+
+# INFO ENDPOINT CONFIGURATION
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
