--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,18 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.blazartech</groupId>
     <artifactId>BlazarArchive</artifactId>
-    <version>1.11-RELEASE</version>
+    <version>1.12-RELEASE</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.blazartech.blazararchive.Main</exec.mainClass>
+        <maven.compiler.release>17</maven.compiler.release>
     </properties>
     
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.2</version>
+        <version>3.1.3</version>
     </parent>
     
     <description>an incredibly simplistic and inelegant artifact manager</description>
